Fixing an incorrect margin on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
 .wrapper { padding: 50px 20% 150px 20%; }
 
 @media only screen and (max-width: 600px) {
-  .wrapper { padding: 50px 10% 150px 20%; }
+  .wrapper { padding: 50px 10% 150px 10%; }
 }
 
 #profile { width: 200px; }
